Don't check 'visibility' in LayoutSVGResourceMasker

Since 'visibility' does not work in the same way as 'display', it's not
possible to "prune" subtrees based on non-'visible' values of the
property. Remove the check from the two methods that use it, and leave
to lower levels to handle it.

BUG=672055

Review-Url: https://codereview.chromium.org/2558793002
Cr-Commit-Position: refs/heads/master@{#436996}

Former-commit-id: 51a75fa55ba71462963ddcf085995cf3eca66104